--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
   "arrowParens": "avoid",
   "singleQuote": true,
   "trailingComma": "none",
-  "printWidth": 120
+  "printWidth": 120,
+  "endOfLine":"auto"
 }
