--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "normalize.css": "^8.0.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vuetify": "^2.3.20",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/test-utils": "^1.1.0",
     "babel-eslint": "^10.1.0",
+    "deepmerge": "^4.2.2",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.1.3",
@@ -38,6 +40,8 @@
     "lint-staged": "^10.5.2",
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
+    "svg-sprite-loader": "^5.0.0",
+    "sass": "^1.30.0",
     "sass-loader": "^8.0.2",
     "stylelint": "^13.7.2",
     "stylelint-config-recommended-scss": "^4.2.0",
