--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@ascendancyy/vue-cli-plugin-stylelint": "^1.1.2",
+    "@vue/cli": "^4.5.9",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
@@ -40,13 +41,13 @@
     "lint-staged": "^10.5.2",
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
-    "svg-sprite-loader": "^5.0.0",
     "sass": "^1.30.0",
     "sass-loader": "^8.0.2",
     "stylelint": "^13.7.2",
     "stylelint-config-recommended-scss": "^4.2.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-scss": "^3.18.0",
+    "svg-sprite-loader": "^5.0.0",
     "vue-template-compiler": "^2.6.11"
   },
   "husky": {
