--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "normalize.css": "^8.0.1",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.22.4",
     "vue-router": "^3.2.0",
     "vuetify": "^2.3.20",
     "vuex": "^3.4.0"
