--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,5 @@ services:
       context: .
       dockerfile: './Dockerfile'
     ports:
-      - '8080:8080'
-    volumes:
-      - '.:/app'
-    command: /bin/sh -c "npm install -g @vue/cli && npm install && npm rebuild node-sass && npm run serve"
+      - '8080:80'
+    command: ['nginx', '-g', 'daemon off;']
