--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build-prod": "vue-cli-service build --mode production",
     "lint": "vue-cli-service lint",
     "lint:style": "vue-cli-service lint:style",
     "test:unit": "vue-cli-service test:unit"
