--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "normalize.css": "^8.0.1",
     "vue": "^2.6.11",
     "vue-component-media-queries": "^1.0.0",
+    "vue-element-loading": "^2.0.2",
     "vue-i18n": "^8.22.4",
     "vue-router": "^3.2.0",
     "vuetify": "^2.3.20",
