--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --port 8080",
     "build": "vue-cli-service build",
     "build-prod": "vue-cli-service build --mode production",
     "lint": "vue-cli-service lint",
@@ -15,6 +15,7 @@
     "core-js": "^3.6.5",
     "js-base64": "^3.6.0",
     "normalize.css": "^8.0.1",
+    "qrcode-generator": "^1.4.4",
     "vue": "^2.6.11",
     "vue-component-media-queries": "^1.0.0",
     "vue-element-loading": "^2.0.2",
