--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "qrcode-generator": "^1.4.4",
     "vue": "^2.6.11",
     "vue-component-media-queries": "^1.0.0",
+    "vue-cryptoicon": "^0.17.2",
     "vue-element-loading": "^2.0.2",
     "vue-i18n": "^8.22.4",
     "vue-router": "^3.2.0",
