--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nmh-dashboard-front",
+  "name": "swaponline.design-components",
   "version": "0.0.0",
   "private": true,
   "scripts": {
