--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "js-base64": "^3.6.1",
     "normalize.css": "^8.0.1",
     "qrcode-generator": "^1.4.4",
+    "v-tooltip": "^2.1.3",
     "vue": "^2.6.11",
     "vue-component-media-queries": "^1.0.0",
     "vue-cryptoicon": "^0.17.2",
