--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
+    "axios-extensions": "^3.1.3",
     "canvg": "^3.0.7",
     "core-js": "^3.6.5",
     "js-base64": "^3.6.1",
     "lodash.clonedeep": "^4.5.0",
+    "lodash.debounce": "^4.0.8",
     "nanoevents": "^6.0.1",
     "normalize.css": "^8.0.1",
     "qrcode-generator": "^1.4.4",
