--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-cryptoicon": "^0.17.2",
     "vue-element-loading": "^2.0.2",
     "vue-i18n": "^8.22.4",
+    "vue-infinite-loading": "^2.4.5",
     "vue-router": "^3.2.0",
     "vuetify": "^2.3.20",
     "vuex": "^3.4.0"
