--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "js-base64": "^3.6.1",
     "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
+    "lodash.isequal": "^4.5.0",
     "nanoevents": "^6.0.1",
     "normalize.css": "^8.0.1",
     "qrcode-generator": "^1.4.4",
