--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
+    "lodash.merge": "^4.6.2",
     "nanoevents": "^6.0.1",
     "normalize.css": "^8.0.1",
     "qrcode-generator": "^1.4.4",
