--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios-extensions": "^3.1.3",
     "canvg": "^3.0.7",
     "core-js": "^3.6.5",
+    "date-fns": "^2.27.0",
     "decimal.js-light": "^2.5.1",
     "js-base64": "^3.6.1",
     "lightweight-charts": "^3.7.0",
